@@ -1,11 +1,13 @@
 /* ex: set ro ft=c: -*- mode: c; buffer-read-only: t -*- */
 /* libu8ident - Check unicode security guidelines for identifiers.
-   Copyright 2014, 2021 Reini Urban
+   Copyright 2014, 2021, 2022 Reini Urban
    SPDX-License-Identifier: Apache-2.0 OR GPL-2.0-or-later
 
-   All Combining_Mark (Mc | Me | Mn)
+   All Combining_Mark (Mc | Me | Mn),
+   All letters with non-spacing combining marks.
    Generated by mkmark.pl, do not modify.
 */
+#include <stdint.h>
 
 /* All Combining Marks, sorted */
 #ifdef EXTERN_SCRIPTS
@@ -312,6 +314,244 @@ const struct range_bool mark_list[] = {
     { 0x1E8D0, 0x1E8D6 },
     { 0x1E944, 0x1E94A },
     { 0xE0100, 0xE01EF },
+    // clang-format on
+};
+#endif
+
+/* All non-spacing combining marks, sorted */
+enum nsm_marks {
+    NSM_GRAVE,	/* 300 */
+    NSM_ACUTE,	/* 301 */
+    NSM_CIRCUMFLEX,	/* 302 */
+    NSM_TILDE,	/* 303 */
+    NSM_MACRON,	/* 304 */
+    NSM_OVERSCORE,	/* 305 */
+    NSM_BREVE,	/* 306 */
+    NSM_DOT_ABOVE,	/* 307 */
+    NSM_DIAERESIS,	/* 308 */
+    NSM_HOOK_ABOVE,	/* 309 */
+    NSM_RING_ABOVE,	/* 30a */
+    NSM_DOUBLE_ACUTE,	/* 30b */
+    NSM_HACEK,	/* 30c */
+    NSM_VERTICAL_LINE_ABOVE,	/* 30d */
+    NSM_DOUBLE_VERTICAL_LINE_ABOVE,	/* 30e */
+    NSM_DOUBLE_GRAVE,	/* 30f */
+    NSM_CANDRABINDU,	/* 310 */
+    NSM_INVERTED_BREVE,	/* 311 */
+    NSM_TURNED_COMMA_ABOVE,	/* 312 */
+    NSM_COMMA_ABOVE,	/* 313 */
+    NSM_REVERSED_COMMA_ABOVE,	/* 314 */
+    NSM_COMMA_ABOVE_RIGHT,	/* 315 */
+    NSM_GRAVE_BELOW,	/* 316 */
+    NSM_ACUTE_BELOW,	/* 317 */
+    NSM_LEFT_TACK_BELOW,	/* 318 */
+    NSM_RIGHT_TACK_BELOW,	/* 319 */
+    NSM_LEFT_ANGLE_ABOVE,	/* 31a */
+    NSM_HORN,	/* 31b */
+    NSM_LEFT_HALF_RING_BELOW,	/* 31c */
+    NSM_UP_TACK_BELOW,	/* 31d */
+    NSM_DOWN_TACK_BELOW,	/* 31e */
+    NSM_PLUS_SIGN_BELOW,	/* 31f */
+    NSM_MINUS_SIGN_BELOW,	/* 320 */
+    NSM_PALATALIZED_HOOK_BELOW,	/* 321 */
+    NSM_RETROFLEX_HOOK_BELOW,	/* 322 */
+    NSM_DOT_BELOW,	/* 323 */
+    NSM_DOUBLE_DOT_BELOW,	/* 324 */
+    NSM_RING_BELOW,	/* 325 */
+    NSM_COMMA_BELOW,	/* 326 */
+    NSM_CEDILLA,	/* 327 */
+    NSM_OGONEK,	/* 328 */
+    NSM_VERTICAL_LINE_BELOW,	/* 329 */
+    NSM_BRIDGE_BELOW,	/* 32a */
+    NSM_INVERTED_DOUBLE_ARCH_BELOW,	/* 32b */
+    NSM_HACEK_BELOW,	/* 32c */
+    NSM_CIRCUMFLEX_BELOW,	/* 32d */
+    NSM_BREVE_BELOW,	/* 32e */
+    NSM_INVERTED_BREVE_BELOW,	/* 32f */
+    NSM_TILDE_BELOW,	/* 330 */
+    NSM_MACRON_BELOW,	/* 331 */
+    NSM_UNDERSCORE,	/* 332 */
+    NSM_DOUBLE_UNDERSCORE,	/* 333 */
+    NSM_TILDE_OVERLAY,	/* 334 */
+    NSM_SHORT_BAR_OVERLAY,	/* 335 */
+    NSM_LONG_BAR_OVERLAY,	/* 336 */
+    NSM_SHORT_SLASH_OVERLAY,	/* 337 */
+    NSM_LONG_SLASH_OVERLAY,	/* 338 */
+    NSM_RIGHT_HALF_RING_BELOW,	/* 339 */
+    NSM_INVERTED_BRIDGE_BELOW,	/* 33a */
+    NSM_SQUARE_BELOW,	/* 33b */
+    NSM_SEAGULL_BELOW,	/* 33c */
+    NSM_X_ABOVE,	/* 33d */
+    NSM_VERTICAL_TILDE,	/* 33e */
+    NSM_DOUBLE_OVERSCORE,	/* 33f */
+    NSM_GRAVE_TONE_MARK,	/* 340 */
+    NSM_ACUTE_TONE_MARK,	/* 341 */
+    NSM_LEFT_HARPOON_ABOVE,	/* 20d0 */
+    NSM_RIGHT_HARPOON_ABOVE,	/* 20d1 */
+    NSM_LONG_VERTICAL_BAR_OVERLAY,	/* 20d2 */
+    NSM_SHORT_VERTICAL_BAR_OVERLAY,	/* 20d3 */
+    NSM_ANTICLOCKWISE_ARROW_ABOVE,	/* 20d4 */
+    NSM_CLOCKWISE_ARROW_ABOVE,	/* 20d5 */
+    NSM_LEFT_ARROW_ABOVE,	/* 20d6 */
+    NSM_RIGHT_ARROW_ABOVE,	/* 20d7 */
+    NSM_RING_OVERLAY,	/* 20d8 */
+    NSM_CLOCKWISE_RING_OVERLAY,	/* 20d9 */
+    NSM_ANTICLOCKWISE_RING_OVERLAY,	/* 20da */
+    NSM_THREE_DOTS_ABOVE,	/* 20db */
+    NSM_FOUR_DOTS_ABOVE,	/* 20dc */
+    NSM_LEFT_RIGHT_ARROW_ABOVE,	/* 20e1 */
+    NSM_KATAKANA_HIRAGANA_VOICED_SOUND_MARK,	/* 3099 */
+    NSM_KATAKANA_HIRAGANA_SEMI_VOICED_SOUND_MARK,	/* 309a */
+    NSM_LAST
+};
+
+/* All letters with non-spacing combining marks, sorted.
+   The first entry is the NSM, if letters exist.
+ */
+#ifdef EXTERN_SCRIPTS
+extern const uint32_t nsm_letters[][82];
+#else
+const uint32_t nsm_letters[][82] = {
+    // clang-format off
+    { 0x300,
+      0xc0, 0xc8, 0xcc, 0xd2, 0xd9, 0xe0, 0xe8, 0xec, 0xf2, 0xf9,
+      0x1f8, 0x1f9, 0x400, 0x40d, 0x450, 0x45d, 0x1e80, 0x1e81, 0x1ef2, 0x1ef3,
+      0 },	/* NSM: GRAVE 300 */
+    { 0x301,
+      0xc1, 0xc9, 0xcd, 0xd3, 0xda, 0xdd, 0xe1, 0xe9, 0xed, 0xf3,
+      0xfa, 0xfd, 0x106, 0x107, 0x139, 0x13a, 0x143, 0x144, 0x154, 0x155,
+      0x15a, 0x15b, 0x179, 0x17a, 0x1f4, 0x1f5, 0x1fc, 0x1fd, 0x1e30, 0x1e31,
+      0x1e3e, 0x1e3f, 0x1e54, 0x1e55, 0x1e82, 0x1e83, 0 },	/* NSM: ACUTE 301 */
+    { 0x302,
+      0xc2, 0xca, 0xce, 0xd4, 0xdb, 0xe2, 0xea, 0xee, 0xf4, 0xfb,
+      0x108, 0x109, 0x11c, 0x11d, 0x124, 0x125, 0x134, 0x135, 0x15c, 0x15d,
+      0x174, 0x175, 0x176, 0x177, 0x1e90, 0x1e91, 0 },	/* NSM: CIRCUMFLEX 302 */
+    { 0x303,
+      0xc3, 0xd1, 0xd5, 0xe3, 0xf1, 0xf5, 0x128, 0x129, 0x168, 0x169,
+      0x1e7c, 0x1e7d, 0x1ebc, 0x1ebd, 0x1ef8, 0x1ef9, 0 },	/* NSM: TILDE 303 */
+    { 0x304,
+      0x100, 0x101, 0x112, 0x113, 0x12a, 0x12b, 0x14c, 0x14d, 0x16a, 0x16b,
+      0x1e2, 0x1e3, 0x232, 0x233, 0x4e2, 0x4e3, 0x4ee, 0x4ef, 0x1e20, 0x1e21,
+      0x1fb1, 0x1fb9, 0x1fd1, 0x1fd9, 0x1fe1, 0x1fe9, 0 },	/* NSM: MACRON 304 */
+    { 0 },	/* NSM: OVERSCORE 305 */
+    { 0x306,
+      0x102, 0x103, 0x114, 0x115, 0x11e, 0x11f, 0x12c, 0x12d, 0x14e, 0x14f,
+      0x16c, 0x16d, 0x4c1, 0x4c2, 0x4d0, 0x4d1, 0x4d6, 0x4d7, 0 },	/* NSM: BREVE 306 */
+    { 0x307,
+      0x0, 0x10a, 0x10b, 0x116, 0x117, 0x120, 0x121, 0x130, 0x17b, 0x17c,
+      0x226, 0x227, 0x22e, 0x22f, 0x6a7, 0x6ac, 0x6b6, 0x6bf, 0x6cf, 0x762,
+      0x765, 0x87a, 0x1e02, 0x1e03, 0x1e0a, 0x1e0b, 0x1e1e, 0x1e1f, 0x1e22, 0x1e23,
+      0x1e40, 0x1e41, 0x1e44, 0x1e45, 0x1e56, 0x1e57, 0x1e58, 0x1e59, 0x1e60, 0x1e61,
+      0x1e6a, 0x1e6b, 0x1e86, 0x1e87, 0x1e8a, 0x1e8b, 0x1e8e, 0x1e8f, 0x1e9b, 0x312e,
+      0x10eb0, 0 },	/* NSM: DOT ABOVE 307 */
+    { 0x308,
+      0xc4, 0xcb, 0xcf, 0xd6, 0xdc, 0xe4, 0xeb, 0xef, 0xf6, 0xfc,
+      0xff, 0x178, 0x4d2, 0x4d3, 0x4da, 0x4db, 0x4dc, 0x4dd, 0x4de, 0x4df,
+      0x4e4, 0x4e5, 0x4e6, 0x4e7, 0x4ea, 0x4eb, 0x4ec, 0x4ed, 0x4f0, 0x4f1,
+      0x4f4, 0x4f5, 0x4f8, 0x4f9, 0x1df2, 0x1df3, 0x1df4, 0x1e26, 0x1e27, 0x1e84,
+      0x1e85, 0x1e8c, 0x1e8d, 0x1e97, 0 },	/* NSM: DIAERESIS 308 */
+    { 0x309,
+      0x1ea2, 0x1ea3, 0x1eba, 0x1ebb, 0x1ec8, 0x1ec9, 0x1ece, 0x1ecf, 0x1ee6, 0x1ee7,
+      0x1ef6, 0x1ef7, 0 },	/* NSM: HOOK ABOVE 309 */
+    { 0x30a,
+      0xc5, 0xe5, 0x16e, 0x16f, 0x1e98, 0x1e99, 0 },	/* NSM: RING ABOVE 30a */
+    { 0x30b,
+      0x150, 0x151, 0x170, 0x171, 0x4f2, 0x4f3, 0 },	/* NSM: DOUBLE ACUTE 30b */
+    { 0 },	/* NSM: HACEK 30c */
+    { 0 },	/* NSM: VERTICAL LINE ABOVE 30d */
+    { 0 },	/* NSM: DOUBLE VERTICAL LINE ABOVE 30e */
+    { 0x30f,
+      0x200, 0x201, 0x204, 0x205, 0x208, 0x209, 0x20c, 0x20d, 0x210, 0x211,
+      0x214, 0x215, 0 },	/* NSM: DOUBLE GRAVE 30f */
+    { 0 },	/* NSM: CANDRABINDU 310 */
+    { 0x311,
+      0x202, 0x203, 0x206, 0x207, 0x20a, 0x20b, 0x20e, 0x20f, 0x212, 0x213,
+      0x216, 0x217, 0 },	/* NSM: INVERTED BREVE 311 */
+    { 0 },	/* NSM: TURNED COMMA ABOVE 312 */
+    { 0 },	/* NSM: COMMA ABOVE 313 */
+    { 0 },	/* NSM: REVERSED COMMA ABOVE 314 */
+    { 0 },	/* NSM: COMMA ABOVE RIGHT 315 */
+    { 0 },	/* NSM: GRAVE BELOW 316 */
+    { 0 },	/* NSM: ACUTE BELOW 317 */
+    { 0 },	/* NSM: LEFT TACK BELOW 318 */
+    { 0 },	/* NSM: RIGHT TACK BELOW 319 */
+    { 0 },	/* NSM: LEFT ANGLE ABOVE 31a */
+    { 0x31b,
+      0x1a0, 0x1a1, 0x1af, 0x1b0, 0 },	/* NSM: HORN 31b */
+    { 0 },	/* NSM: LEFT HALF RING BELOW 31c */
+    { 0 },	/* NSM: UP TACK BELOW 31d */
+    { 0 },	/* NSM: DOWN TACK BELOW 31e */
+    { 0 },	/* NSM: PLUS SIGN BELOW 31f */
+    { 0 },	/* NSM: MINUS SIGN BELOW 320 */
+    { 0 },	/* NSM: PALATALIZED HOOK BELOW 321 */
+    { 0 },	/* NSM: RETROFLEX HOOK BELOW 322 */
+    { 0x323,
+      0x68a, 0x694, 0x6a3, 0x6b9, 0x6fa, 0x6fb, 0x6fc, 0x766, 0x88b, 0x8a5,
+      0x8b4, 0x1e04, 0x1e05, 0x1e0c, 0x1e0d, 0x1e24, 0x1e25, 0x1e32, 0x1e33, 0x1e36,
+      0x1e37, 0x1e42, 0x1e43, 0x1e46, 0x1e47, 0x1e5a, 0x1e5b, 0x1e62, 0x1e63, 0x1e6c,
+      0x1e6d, 0x1e7e, 0x1e7f, 0x1e88, 0x1e89, 0x1e92, 0x1e93, 0x1ea0, 0x1ea1, 0x1eb8,
+      0x1eb9, 0x1eca, 0x1ecb, 0x1ecc, 0x1ecd, 0x1ee4, 0x1ee5, 0x1ef4, 0x1ef5, 0x1bc26,
+      0 },	/* NSM: DOT BELOW 323 */
+    { 0 },	/* NSM: DOUBLE DOT BELOW 324 */
+    { 0x325,
+      0x1e00, 0x1e01, 0 },	/* NSM: RING BELOW 325 */
+    { 0x326,
+      0x218, 0x219, 0x21a, 0x21b, 0 },	/* NSM: COMMA BELOW 326 */
+    { 0x327,
+      0xc7, 0xe7, 0x122, 0x123, 0x136, 0x137, 0x13b, 0x13c, 0x145, 0x146,
+      0x156, 0x157, 0x15e, 0x15f, 0x162, 0x163, 0x228, 0x229, 0x1e10, 0x1e11,
+      0x1e28, 0x1e29, 0 },	/* NSM: CEDILLA 327 */
+    { 0x328,
+      0x104, 0x105, 0x118, 0x119, 0x12e, 0x12f, 0x172, 0x173, 0x1ea, 0x1eb,
+      0 },	/* NSM: OGONEK 328 */
+    { 0 },	/* NSM: VERTICAL LINE BELOW 329 */
+    { 0 },	/* NSM: BRIDGE BELOW 32a */
+    { 0 },	/* NSM: INVERTED DOUBLE ARCH BELOW 32b */
+    { 0 },	/* NSM: HACEK BELOW 32c */
+    { 0x32d,
+      0x1e12, 0x1e13, 0x1e18, 0x1e19, 0x1e3c, 0x1e3d, 0x1e4a, 0x1e4b, 0x1e70, 0x1e71,
+      0x1e76, 0x1e77, 0 },	/* NSM: CIRCUMFLEX BELOW 32d */
+    { 0x32e,
+      0x1e2a, 0x1e2b, 0 },	/* NSM: BREVE BELOW 32e */
+    { 0 },	/* NSM: INVERTED BREVE BELOW 32f */
+    { 0x330,
+      0x1e1a, 0x1e1b, 0x1e2c, 0x1e2d, 0x1e74, 0x1e75, 0 },	/* NSM: TILDE BELOW 330 */
+    { 0 },	/* NSM: MACRON BELOW 331 */
+    { 0 },	/* NSM: UNDERSCORE 332 */
+    { 0 },	/* NSM: DOUBLE UNDERSCORE 333 */
+    { 0 },	/* NSM: TILDE OVERLAY 334 */
+    { 0 },	/* NSM: SHORT BAR OVERLAY 335 */
+    { 0 },	/* NSM: LONG BAR OVERLAY 336 */
+    { 0 },	/* NSM: SHORT SLASH OVERLAY 337 */
+    { 0 },	/* NSM: LONG SLASH OVERLAY 338 */
+    { 0 },	/* NSM: RIGHT HALF RING BELOW 339 */
+    { 0 },	/* NSM: INVERTED BRIDGE BELOW 33a */
+    { 0 },	/* NSM: SQUARE BELOW 33b */
+    { 0 },	/* NSM: SEAGULL BELOW 33c */
+    { 0 },	/* NSM: X ABOVE 33d */
+    { 0 },	/* NSM: VERTICAL TILDE 33e */
+    { 0 },	/* NSM: DOUBLE OVERSCORE 33f */
+    { 0 },	/* NSM: GRAVE TONE MARK 340 */
+    { 0 },	/* NSM: ACUTE TONE MARK 341 */
+    { 0 },	/* NSM: LEFT HARPOON ABOVE 20d0 */
+    { 0 },	/* NSM: RIGHT HARPOON ABOVE 20d1 */
+    { 0 },	/* NSM: LONG VERTICAL BAR OVERLAY 20d2 */
+    { 0 },	/* NSM: SHORT VERTICAL BAR OVERLAY 20d3 */
+    { 0 },	/* NSM: ANTICLOCKWISE ARROW ABOVE 20d4 */
+    { 0 },	/* NSM: CLOCKWISE ARROW ABOVE 20d5 */
+    { 0 },	/* NSM: LEFT ARROW ABOVE 20d6 */
+    { 0 },	/* NSM: RIGHT ARROW ABOVE 20d7 */
+    { 0 },	/* NSM: RING OVERLAY 20d8 */
+    { 0 },	/* NSM: CLOCKWISE RING OVERLAY 20d9 */
+    { 0 },	/* NSM: ANTICLOCKWISE RING OVERLAY 20da */
+    { 0x20db,
+      0x63f, 0x685, 0x69e, 0x69f, 0x6a0, 0x6a8, 0x6b4, 0x6b7, 0x6bd, 0x763,
+      0x8a7, 0x8c3, 0x8c4, 0x8c5, 0 },	/* NSM: THREE DOTS ABOVE 20db */
+    { 0x20dc,
+      0x690, 0x699, 0x75c, 0 },	/* NSM: FOUR DOTS ABOVE 20dc */
+    { 0 },	/* NSM: LEFT RIGHT ARROW ABOVE 20e1 */
+    { 0 },	/* NSM: KATAKANA-HIRAGANA VOICED SOUND MARK 3099 */
+    { 0 },	/* NSM: KATAKANA-HIRAGANA SEMI-VOICED SOUND MARK 309a */
     // clang-format on
 };
 #endif
